--- a/app/src/main/res/layout/activity_user_lavel.xml
+++ b/app/src/main/res/layout/activity_user_lavel.xml
@@ -9,79 +9,246 @@
     android:orientation="vertical"
     >
 
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="this is user level"
-        android:textSize="30sp"
-        android:gravity="center"
-        />
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="2"
+        android:layout_height="250dp"
         >
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:text="courent level"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
-        <TextView
-            android:id="@+id/courent_level"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="123"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:text="target level"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
-        <TextView
-            android:id="@+id/target_level"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="223"
-            android:textSize="20dp"
-            android:gravity="center"
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/user_level_bg_2"
+            android:scaleType="fitXY"
             />
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:text="courent exp"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
+        <FrameLayout
+            android:layout_width="100dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photo_round"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/add_photo2"
+                app:civ_border_color="#ECF1F1"
+                app:civ_border_width="2dp"
+                />
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:src="@drawable/level_bg1"
+                android:scaleType="fitXY"
+                android:layout_gravity="bottom|center_horizontal"
+                />
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginBottom="26dp"
+                >
 
-        <TextView
-            android:id="@+id/courent_exp"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:text="1230"
-            android:textSize="20dp" />
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:text="target exp"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:text="Lv. "
+                    android:textSize="15sp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    />
+                <TextView
+                    android:id="@+id/courent_level2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:text="1230"
+                    android:textColor="#FFB700"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/arbutus"
+                    />
 
+
+            </GridLayout>
+
+
+        </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="20"
+            android:layout_marginHorizontal="10dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="50dp"
+
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="Lv."
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"
+                android:layout_weight=".5"
+
+
+                />
+
+            <TextView
+                android:id="@+id/courent_level"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="123"
+                android:textSize="15sp"
+                android:gravity="left|center_vertical"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+
+                android:layout_gravity="center_vertical"
+                android:layout_weight=".5"
+                />
+
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:progressDrawable="@drawable/custom_progress_bg"
+                android:layout_weight="18"
+                android:layout_gravity="center_vertical"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="Lv."
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                />
+
+            <TextView
+                android:id="@+id/target_level"
+                android:layout_width="wrap_content"
+                android:layout_height="25sp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="left|center_vertical"
+                android:text="223"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
         <TextView
             android:id="@+id/target_exp"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:gravity="center"
             android:text="12241242000"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="15dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="need "
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_gravity="bottom|center_horizontal"
+                android:textColor="@color/white"
+
+
+                />
+                <TextView
+                    android:id="@+id/need_exp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:text="223"
+                    android:textSize="15sp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold"
+                    android:textColor="#FFB700"
+                    android:layout_gravity="center_vertical"
+
+                    />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text=" EXP to upgrade "
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_gravity="bottom|center_horizontal"
+                android:textColor="@color/white"
+
+
+                />
+
+
+
+        </LinearLayout>
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="80dp"
+            >
+
+
+            <TextView
+                android:id="@+id/courent_exp"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:text="1230"
+                android:textColor="#FFB700"
+                android:textSize="15sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text=" EXP"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_gravity="bottom|center_horizontal"
+                android:textColor="@color/white"
+                />
+
+        </GridLayout>
+
+
+    </FrameLayout>
+
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        >
+
         <TextView
             android:layout_width="150dp"
             android:layout_height="40dp"
@@ -102,11 +269,12 @@
     <LinearLayout
 
 
-        android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
         android:orientation="vertical"
         android:background="#EAF1F1"
         >
+
         <ImageView
             android:id="@+id/gift_test"
             android:layout_width="100dp"
