--- a/app/src/main/res/layout/activity_profile_main_image.xml
+++ b/app/src/main/res/layout/activity_profile_main_image.xml
@@ -40,18 +40,35 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
                     />
-
+                <FrameLayout
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="30dp"
+                    >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/photo_round1"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_marginTop="60dp"
-                    android:layout_marginLeft="30dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
                     android:src="@drawable/ladis4"
                     app:civ_border_color="#ECF1F1"
                     app:civ_border_width="2dp"
 
+
+
                     />
+                <ImageView
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:src="@drawable/pngwing_1"
+                    android:layout_gravity="center"
+                    android:scaleType="fitXY"
+                    android:visibility="visible"
+                    />
+                </FrameLayout>
+
+
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
