--- a/app/src/main/res/layout/activity_user_lavel.xml
+++ b/app/src/main/res/layout/activity_user_lavel.xml
@@ -20,7 +20,6 @@
             android:src="@drawable/user_level_bg_2"
             android:scaleType="fitXY"
             />
-
         <FrameLayout
             android:layout_width="100dp"
             android:layout_height="120dp"
@@ -138,18 +137,18 @@
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical"
                 />
-
             <TextView
                 android:id="@+id/target_level"
                 android:layout_width="wrap_content"
-                android:layout_height="25sp"
+                android:layout_height="25dp"
+                android:text="223"
+                android:textSize="15sp"
+                android:gravity="left|center_vertical"
+                android:textStyle="bold"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:gravity="left|center_vertical"
-                android:text="223"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                />
         </LinearLayout>
         <TextView
             android:id="@+id/target_exp"
@@ -269,8 +268,8 @@
     <LinearLayout
 
 
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:orientation="vertical"
         android:background="#EAF1F1"
         >
