--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,60 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@drawable/f_bag"
-
     >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign in \n with"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:gravity="center_horizontal"
-        android:fontFamily="@font/audiowide"
-        android:layout_marginTop="90dp"
-        />
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/panda1"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="30dp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/sign_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="70dp"
-        android:backgroundTint="#313A3C"
+        android:backgroundTint="#20153DC6"
         android:fontFamily="@font/audiowide"
-        android:drawableLeft="@drawable/phone_i_1"
-        android:text="Phone Number"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:gravity="center_horizontal"
+        android:text="Phone"
+        android:textColor="#090909"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+
+        />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="OR"
-        android:textColor="@color/white"
-        android:textSize="40sp"
-        android:gravity="center_horizontal"
-        android:fontFamily="@font/audiowide"
+        android:layout_height="38dp"
         android:layout_marginTop="30dp"
-        />
-    <com.google.android.material.button.MaterialButton
+        android:fontFamily="@font/audiowide"
+        android:gravity="center_horizontal"
+        android:text="OR"
+        android:textColor="@color/black"
+        android:textSize="30sp" />
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/sign_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginHorizontal="90dp"
-        android:backgroundTint="#313A3C"
-        android:drawableLeft="@drawable/mail_001"
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#20153DC6"
         android:fontFamily="@font/audiowide"
-        android:text="Email"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:gravity="center_horizontal"
+        android:text="Mail"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAllCaps="false"
 
 
-
-
+        />
+    <TextView
+        android:id="@+id/pilicy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="By continuing you agree \nto the terms of service and privacy policy"
+        android:gravity="center"
+        android:layout_weight="1"
+        />
 
 
 
