--- a/app/src/main/res/layout/activity_policy.xml
+++ b/app/src/main/res/layout/activity_policy.xml
@@ -12,15 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:text=""
-                />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
 
+        </LinearLayout>
 
     </ScrollView>
 
