--- a/app/src/main/res/layout/activity_profile_main_image.xml
+++ b/app/src/main/res/layout/activity_profile_main_image.xml
@@ -251,7 +251,8 @@
                         android:layout_height="70dp"
                         android:layout_marginLeft="10dp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/badge_top_1"
+                        android:src="@drawable/ladis4"
+                        android:scaleType="fitStart"
                         />
 
 
