--- a/app/src/main/res/layout/activity_log_phone.xml
+++ b/app/src/main/res/layout/activity_log_phone.xml
@@ -6,20 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Log_phone_Activity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="70dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_plane" />
+            app:srcCompat="@drawable/ic_plane"
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:id="@+id/textView"
@@ -30,9 +30,7 @@
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_gravity="center_horizontal"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
@@ -41,41 +39,38 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="We will send otp to your entered mobile number."
-            app:layout_constraintEnd_toEndOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="@+id/textView"
+            android:layout_gravity="center_horizontal"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <TextView
-            android:id="@+id/textView3"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/border_left"
-            android:padding="15dp"
-            android:text="+88"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/etPhone"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
+            >
 
-        <EditText
-            android:id="@+id/etPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/border_right"
-            android:ems="10"
-            android:hint="1234567890"
-            android:inputType="phone"
-            android:padding="15dp"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:ccp_textSize="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            </com.hbb20.CountryCodePicker>
+
+            <EditText
+                android:id="@+id/etPhone"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+
+                android:hint="1234567890"
+                android:inputType="phone"
+
+                android:textSize="20sp"
+                 />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/btnSend"
@@ -84,11 +79,8 @@
             android:layout_marginTop="45dp"
             android:layout_marginBottom="45dp"
             android:text="SEND"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPhone" />
+            android:layout_gravity="center_horizontal"
+            />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -100,6 +92,8 @@
             app:layout_constraintEnd_toEndOf="@+id/btnSend"
             app:layout_constraintStart_toStartOf="@+id/btnSend"
             app:layout_constraintTop_toTopOf="@+id/btnSend" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </LinearLayout>
 
 </ScrollView>
