--- a/app/src/main/res/layout/activity_mall.xml
+++ b/app/src/main/res/layout/activity_mall.xml
@@ -16,5 +16,10 @@
         android:textSize="30sp"
         android:gravity="center"
         />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/assistant_badge"
+        />
 
 </LinearLayout>
