popup image crope ok

--- a/app/src/main/res/layout/activity_streamer.xml
+++ b/app/src/main/res/layout/activity_streamer.xml
@@ -9,28 +9,28 @@
     android:orientation="vertical"
     android:weightSum="4"
     >
-    <com.airbnb.lottie.LottieAnimationView
 
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:lottie_rawRes="@raw/comming_soon1"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="3"
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Position"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         />
-    <com.airbnb.lottie.LottieAnimationView
 
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:lottie_rawRes="@raw/comming_soon4"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
+        <Button
+            android:id="@+id/streamer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            />
 
-        />
+
 
 
 </LinearLayout>
