--- a/app/src/main/res/drawable/label_back_1.xml
+++ b/app/src/main/res/drawable/label_back_1.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#B394A5D3"
+    <solid android:color="#5476D3"
         />
 
     <corners
