--- a/app/src/main/res/drawable/label_back_3.xml
+++ b/app/src/main/res/drawable/label_back_3.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#CCEAE884"
+    <solid android:color="#A056CD"
         />
 
     <corners
