--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -17,10 +17,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
+        android:columnCount="2"
         android:layout_margin="10dp"
         android:layout_marginTop="30dp"
         >
@@ -39,14 +39,15 @@
             android:id="@+id/save_data"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="120dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="20dp"
             android:text="submit"
             android:backgroundTint="#29DC23"
             />
 
 
 
-    </LinearLayout>
+    </GridLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="330dp"
         android:scaleType="fitXY"
-        android:src="@drawable/ladis6" />
+        android:src="@drawable/profile_bg" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/photo_round1"
@@ -65,7 +66,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="30dp"
-        android:src="@drawable/ladis4"
+        android:src="@drawable/profile_bg"
         app:civ_border_color="#ECF1F1"
         app:civ_border_width="2dp"
 
@@ -75,7 +76,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:scaleType="fitXY"
-            android:src="@drawable/camera_edit"
+            android:src="@drawable/camera"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="85dp"
@@ -85,7 +86,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:scaleType="fitXY"
-            android:src="@drawable/camera_edit"
+            android:src="@drawable/camera"
             android:layout_gravity="top|right"
             android:layout_marginRight="30dp"
             android:layout_marginTop="30dp"
@@ -111,9 +112,10 @@
         android:text="Nickname"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
-        android:background="#DCD7D7"
+        android:background="#E3E9EC"
         android:maxLength="30"
         android:singleLine="true"
+        android:padding="10dp"
         />
 
     <TextView
@@ -125,6 +127,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
         android:background="@color/white"
+
         />
     <EditText
         android:id="@+id/edit_age"
@@ -135,9 +138,10 @@
         android:text="age"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
-        android:background="#DCD7D7"
+        android:background="#E3E9EC"
         android:maxLength="2"
         android:inputType="number"
+        android:padding="10dp"
         />
 
     <TextView
@@ -159,10 +163,11 @@
         android:text="Bio"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
-        android:background="#DCD7D7"
+        android:background="#E3E9EC"
         android:gravity="top|left"
         android:maxLength="300"
         android:layout_marginBottom="30dp"
+        android:padding="10dp"
         />
 
         </LinearLayout>
