--- a/app/src/main/res/layout/activity_diamondsellar.xml
+++ b/app/src/main/res/layout/activity_diamondsellar.xml
@@ -20,36 +20,21 @@
 
         />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:columnCount="2"
-        >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:text="0000"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical|left"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
 
-            />
 
         <Button
+            android:id="@+id/send_diamond_button"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:text="send diamond"
-            android:layout_gravity="right"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"
+            android:layout_marginTop="20dp"
              />
 
-    </GridLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,7 +55,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="10dp"
 
         />
 
