--- a/app/src/main/res/layout/activity_mall.xml
+++ b/app/src/main/res/layout/activity_mall.xml
@@ -7,30 +7,64 @@
     android:layout_height="match_parent"
     tools:context=".Profile_main_image_Activity"
     android:orientation="vertical"
-    android:weightSum="4"
     >
-    <com.airbnb.lottie.LottieAnimationView
 
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:lottie_rawRes="@raw/comming_soon1"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="3"
+        android:layout_height="220dp"
+        android:background="@drawable/mall_back"
+        >
 
+        <FrameLayout
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center"
+            >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photo_round"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logo"
+                app:civ_border_color="#ECF1F1"
+                app:civ_border_width="2dp"
+
+
+                />
+
+            <ImageView
+                android:id="@+id/head_frame"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                android:src="@drawable/frame_1"
+                android:visibility="visible"
+                />
+        </FrameLayout>
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Head Frame"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_marginLeft="10dp"
+        android:layout_marginVertical="10dp"
         />
-    <com.airbnb.lottie.LottieAnimationView
-
-        android:layout_width="match_parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/resical"
+        android:layout_width="320dp"
         android:layout_height="200dp"
-        app:lottie_rawRes="@raw/comming_soon4"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
 
-        />
+        android:layout_gravity="center_horizontal"
+
+        >
+
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </LinearLayout>
