--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,37 +32,39 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/logo" />
 
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
 
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
+            <FrameLayout
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/photo_round"
+                    android:id="@+id/photo_round1"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="center"
                     android:src="@drawable/logo"
                     app:civ_border_color="#ECF1F1"
                     app:civ_border_width="2dp"
 
                     />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/head_frame"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:layout_gravity="center"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/frame_test"
+                    android:visibility="gone"
+                    />
+            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/bach"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="100dp"
-                android:src="@drawable/blue_batch_re"
-                android:visibility="invisible"
 
-                />
+
+
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -73,7 +75,7 @@
                     android:id="@+id/name1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="120dp"
+                    android:layout_marginLeft="170dp"
                     android:layout_marginTop="60dp"
                     android:fontFamily="@font/amarante"
                     android:text="name"
@@ -91,7 +93,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="180dp"
                 android:layout_marginTop="100dp"
                 android:background="@drawable/lable_back_4"
                 android:elevation="10dp"
@@ -146,23 +148,6 @@
                 >
 
                 <Button
-                    android:id="@+id/recharge"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="15dp"
-                    android:background="#00ffffff"
-                    android:drawableLeft="@drawable/diamond_in_profile"
-                    android:fontFamily="@font/amarante"
-                    android:text=" Recharge Diamonds"
-                    android:drawableRight="@drawable/right_arrow"
-                    android:textAllCaps="false"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:gravity="left"
-                    />
-
-                <Button
                     android:id="@+id/coins"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
@@ -178,6 +163,22 @@
                     android:textAllCaps="false"
                     android:gravity="left"
                     />
+
+                <Button
+                    android:id="@+id/recharge"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="#00ffffff"
+                    android:drawableLeft="@drawable/diamond_in_profile"
+                    android:drawableRight="@drawable/right_arrow"
+                    android:fontFamily="@font/amarante"
+                    android:gravity="left"
+                    android:text=" Recharge Diamonds"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
 
                 <Button
                     android:id="@+id/streamer"
